# webcontr

./: Cargo.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yaml
examples/internal-testing/: Cargo.toml
examples/internal-testing/src/: chain.pem  channel.rs  end.key  lib.rs
webcontr/: Cargo.toml
webcontr-macros/: Cargo.toml
webcontr-macros/src/: lib.rs
webcontr-macros/src/service/: mod.rs  res_req.rs  rpc.rs
webcontr/benches/: codec.rs
webcontr/src/: lib.rs  prelude.rs  serve.rs  server.rs  tls.rs  utils.rs
webcontr/src/transport/: channel.rs  frame.rs  mod.rs
webcontr/src/transport/tcp/: frame.rs  mod.rs
webcontr/tests/certs/: chain.pem  end.key  main.rs  root.pem
