[package]
name = "webcontr"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
bincode = "1.3.3"
bytes = "1.9.0"
futures-util = { version = "0.3.31", features = ["sink"] }
pin-project-lite = "0.2.16"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["net", "sync", "rt", "macros", "io-util", "time", "signal"] }
tokio-util = { version = "0.7.13", features = ["codec", "rt"] }
webcontr-macros = { path = "../webcontr-macros" }

[dev-dependencies]
static_assertions = "1.1.0"
