[package]
name = "webcontr"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "codec"
harness = false

[features]
tls = ["dep:tokio-rustls", "dep:webpki-roots", "dep:rustls-pemfile"]
default = []

[dependencies]
async-trait = "0.1.85"
bincode = "1.3.3"
bytes = "1.9.0"
futures-util = { version = "0.3.31", features = ["sink"] }
pin-project-lite = "0.2.16"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["net", "sync", "rt", "macros", "io-util", "time", "signal"] }
tokio-util = { version = "0.7.13", features = ["codec", "rt"] }
webcontr-macros = { path = "../webcontr-macros" }

tokio-rustls = { version ="0.26.1", optional= true }
webpki-roots = { version = "0.26.8", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
tower = { version = "0.5.2", features = ["util"] }

[dev-dependencies]
criterion = "0.5.1"
rcgen = "0.13.2"
static_assertions = "1.1.0"
