[package]
name = "internal-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytes = "1.9.0"
futures-util = { version = "0.3.31", features = ["sink"] }
pin-project-lite = "0.2.16"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "io-util", "time"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
webcontr.path = "../../webcontr"
